# telegram-notice-bot

./: .replit  pyproject.toml  replit.md  replit.nix
.agents/memory/: MEMORY.md  scraper-bot-waf-and-seeding.md
telegram-notice-bot/: .env.example  .gitignore  README.md  browser_client.py  config.py  database.json  database.py  diagnose_browser.py  http_client.py  live_test.py  logger_setup.py  main.py  notice.py  pdf_utils.py  requirements.txt  setup_vps.sh  telegram-notice-bot.service  telegram_sender.py  verify_deployment.py
telegram-notice-bot/scrapers/: __init__.py  ancpatna_scraper.py  ppup_scraper.py  ppupadm_scraper.py
